a2a/0.1/modules/ROOT/pages/index.adoc
= A2A Connector 0.1.0-BETA 
:lc-connector-name: a2a
:uc-connector-name: A2A

Anypoint Connector for Agent2Agent (A2A) (A2A Connector) facilitates inter-agent communication for Large Language Model (LLM) agents and other applications by implementing the A2A protocol. This enables agents to interact and delegate specialized tasks to other agents.

include::connectors::partial$beta-connector-disclaimer.adoc[]

The A2A protocol is an open standard that supports:

* Capability discovery
+
Identifies the functions and services offered by agents.
* Interaction negotiation
+
Establishes communication methods between agents.
* Secure information exchange
+ 
Transmits data between agent systems without requiring direct internal access.

A2A Connector provides Mule app integration that functions as both A2A servers and A2A clients.

[NOTE]
====
This A2A Connector beta release doesn't support these A2A capabilities:

* Streaming
* Notifications
* Task history
====

For information about compatibility and fixed issues, see the A2A Connector Release Notes.

== Before You Begin

To use this connector, you must be familiar with:

* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* How to create a Mule app using Anypoint Code Builder or Anypoint Studio

Before creating an app, you must have:

* Java 17
* Apache Maven
* Anypoint Platform
* Credentials to connect with the target resource
* The latest versions of Anypoint Code Builder or Anypoint Studio

== Common Use Cases for the Connector

Build specialized domain specific agents each for Customer Service, Sales, or Marketing and have other agents interact with these agents using the A2A protocol.

== Connection Types

A2A Connector supports these connection types:

* A2A server
** Introduces a new A2A Listener with a *Task Listener* source.
** Automatically generates an Agent Card based on the connector configuration.
** Processes incoming A2A requests from client agents, extending A2A protocol support to existing agents or other connectors.
* A2A client
** Initiates tasks with other A2A host agents.
** Retrieves task status from A2A host agents.


== Next Step

include::connectors::partial$t-index-partial.adoc[tags=next-step]

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[]
* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[]
* xref:a2a-connector-reference.adoc[A2A Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
