a2a/0.2/modules/ROOT/pages/index.adoc
= A2A Connector 0.2.0-BETA 
:lc-connector-name: a2a

Anypoint Connector for Agent2Agent (A2A) (A2A Connector) facilitates inter-agent communication for Large Language Model (LLM) agents and other applications by implementing the A2A protocol. This enables agents to interact and delegate specialized tasks to other agents.

The A2A protocol is an open standard that supports:

* Capability discovery
+
Identifies the functions and services offered by agents.
* Interaction negotiation
+
Establishes communication methods between agents.
* Secure information exchange
+ 
Transmits data between agent systems without requiring direct internal access.

A2A Connector provides Mule app integration that functions as both A2A servers and A2A clients.

[NOTE]
====
Anypoint Connector for Agent2Agent (A2A) is a beta connector that is subject to the Beta Services Terms at https://www.salesforce.com/company/legal/agreements/[Agreements - Salesforce.com] or a written Unified Pilot Agreement if executed by Customer, and the Non-GA Gen AI and Non-GA Credit Consumption terms in the https://ptd.salesforce.com/?_ga=2.247987783.1372150065.1709219475-629000709.1639001992[Product Terms Directory]. Use of this beta connector with external systems or services consumes xref:general::usage-metrics.adoc[Mule messages] and is at the Customer's sole discretion. 
====

[NOTE]
====
This A2A Connector beta release doesn't support these A2A capabilities:

* Streaming
* Notifications
* Task history
====

For information about compatibility and fixed issues, see the A2A Connector Release Notes.

== Before You Begin

To use this connector, you must be familiar with:

* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* How to create a Mule app using Anypoint Code Builder or Anypoint Studio

Before creating an app, you must have:

* Java 17
* Apache Maven
* Anypoint Platform
* Credentials to connect with the target resource
* The latest versions of Anypoint Code Builder or Anypoint Studio

== Common Use Cases for the Connector

Build specialized domain specific agents each for Customer Service, Sales, or Marketing and have other agents interact with these agents using the A2A protocol.

== Connection Types

A2A Connector supports these connection types:

* A2A server
** Introduces a new A2A Listener with a *Task Listener* source.
** Automatically generates an Agent Card based on the connector configuration.
** Processes incoming A2A requests from client agents, extending A2A protocol support to existing agents or other connectors.
* A2A client
** Initiates tasks with other A2A host agents.
** Retrieves task status from A2A host agents.


== Next Step

include::connectors::partial$t-index-partial.adoc[tags=next-step]

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[]
* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[]
* xref:a2a-connector-reference.adoc[A2A Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
